--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-hook-form": "7.52.2",
     "react-icons": "5.2.1",
     "react-router-dom": "6.26.0",
-    "react-toastify": "10.0.5",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "sweetalert2": "11.12.4",
     "uuid": "^10.0.0",
