--- a/package.json
+++ b/package.json
@@ -35,17 +35,23 @@
     "zustand": "^4.5.5"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@types/prop-types": "^15.7.12",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@vitejs/plugin-react": "4.3.1",
     "dotenv": "^16.4.5",
     "dotenv-cli": "^7.4.2",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "7.35.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-react": "^7.35.0",
     "eslint-plugin-react-hooks": "4.6.2",
     "eslint-plugin-react-refresh": "0.4.9",
+    "globals": "^16.0.0",
     "patch-package": "^8.0.0",
+    "prettier": "^3.5.3",
+    "typescript-eslint": "^8.27.0",
     "vite": "5.3.5"
   }
 }
