--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "1.7.5",
     "bootstrap": "5.3.3",
     "file-saver": "^2.0.5",
+    "font-awesome": "^4.7.0",
     "million": "^3.1.11",
     "react": "^18.3.1",
     "react-accessible-treeview": "2.9.1",
